# formation

./: pyproject.toml
basics/: PY0101EN-1-1-Write_your_first_python_code.ipynb  PY0101EN-4-2-WriteFile.ipynb  PY0101EN-4-3-LoadData.ipynb  PY0101EN-5-1-Numpy1D.ipynb  PY0101EN-5-2-Numpy2D.ipynb  PY0101EN-5.1_Intro_API.ipynb  PY0101EN-5.2_API_2.v2.ipynb  PY0101EN-5.3_Requests_HTTP.ipynb  Pandas_Practice.ipynb  WebScraping_Review_Lab.ipynb
