[tool.poetry]
name = "formation"
version = "0.1.0"
description = ""
authors = ["Pierre Nerriere <tuscaonline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
matplotlib = "^3.7.2"
nba-api = "^1.2.1"
randomuser = "^1.6"
bs4 = "^0.0.1"
lxml = "^4.9.3"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
